# hotel_review_scud

./: Makefile  README.md  pyproject.toml
data/correctness_labeled_scud/jalan/: jalan.Example.jsonl
data/scud/jalan/: jalan_scud_long.Example.jsonl
data/vanilla/dialog/: 5turn.ebe.VanillaUtterance.jsonl
data/vanilla/jalan/: jalan.VanillaUtterance.jsonl
